--- a/index.html
+++ b/index.html
@@ -8,4 +8,23 @@
   <link rel="stylesheet" href="mediaqueries.css" />
 </head>
 <body>
-  
+  <!-- ===== HEADER & NAVBAR ===== -->
+  <header class="site-header">
+  <div class="container nav-container">
+    <!-- Brand / Logo -->
+    <div class="brand">Niloufar Motamedi</div>
+
+    <!-- Mobile menu toggle button -->
+    <button id="nav-toggle" aria-label="toggle menu">☰</button>
+
+    <!-- Navigation links -->
+    <nav class="nav-links" id="navLinks">
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#experience">Experience</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </div>
+</header>
+ 
