feat: create hero/home section with profile
- Implement two-column hero layout with text and image
- Add personal introduction and call-to-action button
- Include profile image with alt text for accessibility
- Create "View My Projects" button linking to projects section

--- a/index.html
+++ b/index.html
@@ -27,4 +27,17 @@
     </nav>
   </div>
 </header>
- 
+  
+  <main>
+    <!-- ===== HERO / HOME SECTION ===== -->
+    <section id="home" class="hero container">
+      <div class="hero-text">
+        <h1>Hello — I’m Niloufar Motamedi</h1>
+        <p>Computer Science Student — Passionate about Web Development and Computer Networks</p>
+        <p><a class="btn" href="#projects">View My Projects</a></p>
+      </div>
+      <div class="hero-image">
+        <img src="./profile.jpg" alt="Profile" />
+      </div>
+    </section>
+
