docs: add about me section and skills
- Implement about section with personal motivation text
- Add skills list with technical competencies
- Include CV download link with PDF file
- Use semantic section and heading elements

--- a/index.html
+++ b/index.html
@@ -41,3 +41,22 @@
       </div>
     </section>
 
+    <!-- ===== ABOUT SECTION ===== -->
+    <section id="about" class="container about">
+      <h2>About Me</h2>
+      <p>
+        A motivated Computer Science student with a strong interest in web design,
+        computer networks, and learning new technologies. Enthusiastic about
+        building creative projects and continuously expanding my technical skills.
+      </p>
+
+      <h3>Skills</h3>
+      <ul class="skills">
+        <li>Python</li>
+        <li>C++</li>
+        <li>Networking Fundamentals (CompTIA Network+)</li>
+        <li>Cisco Networking (CCNA)</li>
+      </ul>
+
+      <p><a href="CV.pdf" download>Download CV (PDF)</a></p>
+    </section>
