docs: populate experience and education section
- Implement style layout for experience items

--- a/index.html
+++ b/index.html
@@ -60,3 +60,21 @@
 
       <p><a href="CV.pdf" download>Download CV (PDF)</a></p>
     </section>
+
+    <!-- ===== EXPERIENCE SECTION ===== -->
+    <section id="experience" class="container experience">
+      <h2>Experience</h2>
+      <div class="timeline">
+        <div class="item">
+          <h4>B.Sc. in Computer Science — Amirkabir University of Technology (Tehran Polytechnic)</h4>
+           <h4>Intern — Bank Mellat</h4> 
+          <p>
+            Gained experience with financial systems and basic financial concepts
+            while supporting IT operations.
+
+          </p>
+        </div>
+      </div>
+    </section>
+
+    
