feat: implement contact section and form
- Add contact information with email mailto link
- Create contact form with name, email, and message fields
- Implement form validation with required attributes
- Include social media links (GitHub and LinkedIn)

--- a/index.html
+++ b/index.html
@@ -111,6 +111,25 @@
       </div>
     </section>
 
-    
+        <!-- ===== CONTACT SECTION ===== -->
+    <section id="contact" class="container contact">
+      <h2>Contact</h2>
+      <p>Email: <a href="mailto:niloufarmotamedi04@gmail.com">niloufarmotamedi04@gmail.com</a></p>
+
+      <form id="contactForm">
+        <label>Name<input type="text" name="name" required /></label>
+        <label>Email<input type="email" name="email" required /></label>
+        <label>Message<textarea name="message" required></textarea></label>
+        <button type="submit" class="btn">Send</button>
+      </form>
+
+      <p>
+        Links:
+        <a href="https://github.com/niloufarmtd" target="_blank">GitHub</a> —
+        <a href="https://www.linkedin.com/in/niloufar-motamedi-1b538026a" target="_blank">LinkedIn</a>
+      </p>
+    </section>
+  </main>
+
 
     
