feat: add site footer
- Implement footer with copyright information
- Use semantic footer element
- Add container for consistent layout
- Include rights reserved text

--- a/index.html
+++ b/index.html
@@ -131,5 +131,13 @@
     </section>
   </main>
 
+  <!-- ===== FOOTER ===== -->
+  <footer class="site-footer">
+    <div class="container">© Niloufar Motamedi — All rights reserved.</div>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
     
