fix: improve mobile responsiveness and layout

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
   </div>
 </header>
-  
+
   <main>
     <!-- ===== HERO / HOME SECTION ===== -->
     <section id="home" class="hero container">
@@ -37,7 +37,7 @@
         <p><a class="btn" href="#projects">View My Projects</a></p>
       </div>
       <div class="hero-image">
-        <img src="./profile.jpg" alt="Profile" />
+        <img src="assets/profile.jpg" alt="Profile photo" />
       </div>
     </section>
 
@@ -76,34 +76,34 @@
         </div>
       </div>
     </section>
-    
-   <!-- ===== PROJECTS SECTION ===== -->
+
+    <!-- ===== PROJECTS SECTION ===== -->
     <section id="projects" class="container projects">
       <h2>Projects</h2>
       <div class="grid">
         <article class="card">
-          <img src="./project1.png" alt="Project 1" />
+          <img src="assets/project1.png" alt="Project 1" />
           <h3>Othello-Game</h3>
           <p>This project implements the classic board game Othello (also known as Reversi) using Python.</p>
           <p><a href="https://github.com/niloufarmtd/Othello-Game" target="_blank" rel="noopener">View on GitHub</a></p>
         </article>
 
         <article class="card">
-          <img src="./project2.png" alt="Project 2" />
+          <img src="assets/project2.png" alt="Project 2" />
           <h3>Skyscraper-Puzzle-Solver</h3>
           <p>A constraint satisfaction problem solver for Skyscraper puzzles using backtracking with MRV, LCV, and MAC optimizations.</p>
           <p><a href="https://github.com/niloufarmtd/Skyscraper-Puzzle-Solver" target="_blank" rel="noopener">View on GitHub</a></p>
         </article>
 
         <article class="card">
-          <img src="./project3.png" alt="Project 3" />
+          <img src="assets/project3.png" alt="Project 3" />
           <h3>Genetic Algorithm</h3>
           <p>A comparative analysis of Genetic Algorithm and K-Means clustering with advanced outlier detection.</p>
           <p><a href="https://github.com/niloufarmtd/Genetic-Algorithm" target="_blank" rel="noopener">View on GitHub</a></p>
         </article>
 
         <article class="card">
-          <img src="./project4.png" alt="Project 4" />
+          <img src="assets/project4.png" alt="Project 4" />
           <h3>Fraud Detection</h3>
           <p>A comprehensive machine learning pipeline for detecting fraudulent transactions using various classification algorithms.</p>
           <p><a href="https://github.com/niloufarmtd/Fraud-Detection" target="_blank" rel="noopener">View on GitHub</a></p>
@@ -111,7 +111,7 @@
       </div>
     </section>
 
-        <!-- ===== CONTACT SECTION ===== -->
+    <!-- ===== CONTACT SECTION ===== -->
     <section id="contact" class="container contact">
       <h2>Contact</h2>
       <p>Email: <a href="mailto:niloufarmotamedi04@gmail.com">niloufarmotamedi04@gmail.com</a></p>
@@ -139,5 +139,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
-    
