fix: address of photos

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <p><a class="btn" href="#projects">View My Projects</a></p>
       </div>
       <div class="hero-image">
-        <img src="assets/profile.jpg" alt="Profile photo" />
+        <img src="./profile.jpg" alt="Profile photo" />
       </div>
     </section>
 
@@ -69,8 +69,7 @@
           <h4>B.Sc. in Computer Science — Amirkabir University of Technology (Tehran Polytechnic)</h4>
            <h4>Intern — Bank Mellat</h4> 
           <p>
-            Gained experience with financial systems and basic financial concepts
-            while supporting IT operations.
+            Gained experience with financial systems and basic financial concepts.
 
           </p>
         </div>
@@ -82,28 +81,28 @@
       <h2>Projects</h2>
       <div class="grid">
         <article class="card">
-          <img src="assets/project1.png" alt="Project 1" />
+          <img src="./project1.png" alt="Project 1" />
           <h3>Othello-Game</h3>
           <p>This project implements the classic board game Othello (also known as Reversi) using Python.</p>
           <p><a href="https://github.com/niloufarmtd/Othello-Game" target="_blank" rel="noopener">View on GitHub</a></p>
         </article>
 
         <article class="card">
-          <img src="assets/project2.png" alt="Project 2" />
+          <img src="./project2.png" alt="Project 2" />
           <h3>Skyscraper-Puzzle-Solver</h3>
           <p>A constraint satisfaction problem solver for Skyscraper puzzles using backtracking with MRV, LCV, and MAC optimizations.</p>
           <p><a href="https://github.com/niloufarmtd/Skyscraper-Puzzle-Solver" target="_blank" rel="noopener">View on GitHub</a></p>
         </article>
 
         <article class="card">
-          <img src="assets/project3.png" alt="Project 3" />
+          <img src="./project3.png" alt="Project 3" />
           <h3>Genetic Algorithm</h3>
           <p>A comparative analysis of Genetic Algorithm and K-Means clustering with advanced outlier detection.</p>
           <p><a href="https://github.com/niloufarmtd/Genetic-Algorithm" target="_blank" rel="noopener">View on GitHub</a></p>
         </article>
 
         <article class="card">
-          <img src="assets/project4.png" alt="Project 4" />
+          <img src="./project4.png" alt="Project 4" />
           <h3>Fraud Detection</h3>
           <p>A comprehensive machine learning pipeline for detecting fraudulent transactions using various classification algorithms.</p>
           <p><a href="https://github.com/niloufarmtd/Fraud-Detection" target="_blank" rel="noopener">View on GitHub</a></p>
